fix: settings nav icon visibility regression in v1.11.4+

--- a/src/features/_settings-panel.scss
+++ b/src/features/_settings-panel.scss
@@ -91,6 +91,10 @@ body:not(.native-scrollbars) .modal-close-button {
   display: none;
 }
 
+.vertical-tab-nav-item-icon {
+  display: none;
+}
+
 /* SETTINGS :: Hotkeys */
 .setting-hotkey {
   background-color: var(--code-background);
